# playground-zkaedi

./: .env.example  .gitignore  DEPLOYMENT.md  FIXES_APPLIED.md  LOGIC_AUDIT_REPORT.md  Makefile  PR_DESCRIPTION.md  README.md  README_SECURITY_AUDIT.md  RECOMMENDATIONS.md  SECURITY_FIXES_SUMMARY.md  SECURITY_REVIEW_PACKAGE.md  TEST_PLAN.md  USAGE.md  eslint.config.mjs  foundry.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: BurnParticles.tsx  GlassCard.tsx  GlowingOrb.tsx  HUD.tsx  Orb.tsx  OrbScene.tsx  OrbVisualization.tsx  ParticleTrails.tsx  TokenActions.tsx  TokenInfo.tsx  WalletConnect.tsx
docs/: ARCHITECTURE.md  DEEP_DIVE.md
fullstack-app/: README.md
fullstack-app/backend/: .env.example  package.json  tsconfig.json
fullstack-app/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
lib/: constants.ts  contract.ts  errorDecoder.ts  soundManager.ts  tokenUtils.ts  wagmi.ts
script/: DeployProxy.s.sol  DeployProxyV3.s.sol  GenerateCalldata.s.sol
script/dex/: ConfigureDEXRouter.s.sol  CrossChainSwapExample.s.sol  DeployDEXRouter.s.sol  ExecuteSwap.s.sol  ManageDEXRouter.s.sol
script/oracle/: ConfigureMultiChainOracles.s.sol  DeployOracle.s.sol  EmergencyPriceOverride.s.sol  MonitorOracleHealth.s.sol  OracleUpgradeManager.s.sol  RegisterChainlinkFeeds.s.sol  RegisterPythFeeds.s.sol  (+3 more)
src/: UUPSTokenV2.sol  UUPSTokenV3.sol
test/: AdvancedRandomizerLib.t.sol  CrossChainInfrastructure.t.sol  ExampleTests.t.sol  GasOptimizedTransfersTest.t.sol  IntegrationTests.t.sol  LibraryTests.t.sol  UUPSTokenV2.t.sol  UUPSTokenV3.t.sol
tests/: __init__.py  test_main.py
(+137 files in other folders)
